Estructura de codigo rasp

--- a/example.py.save.1
+++ b/example.py.save.1
@@ -29,7 +29,7 @@ hx.set_reading_format("LSB", "MSB")
 hx.set_reference_unit(150388.21)
 
 hx.reset()
-#hx.tare()
+hx.tare()
 
 while True:
     try:
